--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -52,6 +52,7 @@
                     android:id="@+id/input_login_reg"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:singleLine="true"
                     android:hint="@string/reg_login"
                     android:inputType="text" />
             </android.support.design.widget.TextInputLayout>
@@ -76,6 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/reg_pas"
+                    android:singleLine="true"
                     android:inputType="textPassword" />
 
             </android.support.design.widget.TextInputLayout>
@@ -99,6 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/reg_pas_again"
+                    android:singleLine="true"
                     android:inputType="textPassword" />
 
             </android.support.design.widget.TextInputLayout>
@@ -121,6 +124,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/reg_email"
+                    android:singleLine="true"
                     android:inputType="textEmailAddress" />
 
             </android.support.design.widget.TextInputLayout>
