--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -20,7 +20,6 @@
         app:srcCompat="@drawable/logo" />
 
 
-
     <android.support.design.widget.TextInputLayout
         android:id="@+id/layout_input_login"
         android:layout_width="match_parent"
@@ -35,13 +34,13 @@
         app:counterEnabled="true"
         app:errorEnabled="true">
 
-        <android.support.design.widget.TextInputEditText
+
+        <EditText
             android:id="@+id/input_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/input_login_str"
             android:inputType="text" />
-
     </android.support.design.widget.TextInputLayout>
 
 
@@ -59,7 +58,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_input_login">
 
-        <android.support.design.widget.TextInputEditText
+        <EditText
             android:id="@+id/input_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
