--- a/app/src/main/res/menu/wall_menu.xml
+++ b/app/src/main/res/menu/wall_menu.xml
@@ -13,8 +13,8 @@
                   android:title="@string/create_article_str"/>
             <item android:id="@+id/show_article_user"
                   android:title="@string/show_article_my_str"/>
-            <item android:id="@+id/show_article_class"
-                  android:title="@string/search_class_str"/>
+            <item android:id="@+id/show_wall_all"
+                  android:title="@string/wall_all_str"/>
             <item android:id="@+id/exit"
                   android:title="@string/exit_str"/>
         </menu>
